example/fail/fail_type9.dl

int $[main]{
    string a;
    a <- 1 ; //incompatible type
    
}

